# src/app/backend/endpoint/validation.ts
@@ -10,5 +10,6 @@ export const schema = Joi.object().keys({
   relay_payload_template_id: Joi.number().allow(null).required(),
   relay_enabled: Joi.boolean().required(),
   relay_target: Joi.string().allow(null).required(),
-  relay_method: Joi.string().valid("POST", "GET", "PATCH", "PUT", "DELETE", "OPTIONS", "HEAD").required()
+  relay_method: Joi.string().valid("POST", "GET", "PATCH", "PUT", "DELETE", "OPTIONS", "HEAD").required(),
+  relay_headers: Joi.object().pattern(Joi.string(), Joi.string()).optional().allow(null)
 })
